# PolarRoute-server

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.debug.yml  compose.prod.yml  compose.yml  docker-entrypoint.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docker-build.yml  docs.yml
api/: index.html
autoapi/polarrouteserver/: index.html
autoapi/polarrouteserver/route_api/: index.html
autoapi/polarrouteserver/route_api/models/: index.html
autoapi/polarrouteserver/route_api/responses/: index.html
autoapi/polarrouteserver/route_api/serializers/: index.html
autoapi/polarrouteserver/route_api/tasks/: index.html
autoapi/polarrouteserver/route_api/utils/: index.html
autoapi/polarrouteserver/route_api/views/: index.html
autoapi/polarrouteserver/settings/docker/: index.html
autoapi/polarrouteserver/settings/docker/development/: index.html
autoapi/polarrouteserver/settings/docker/production/: index.html
autoapi/polarrouteserver/utils/: index.html
autoapi/polarrouteserver/utils/loggers/: index.html
autoapi/request_route/: index.html
autoapi/request_route/request_route/: index.html
autoapi/summary/: index.html
changelog/: index.html
configuration/: index.html
deployment/: index.html
development/: index.html
docs/: apischema.yml  configuration.md  development.md  requesting-routes.md
how-polarroute-server-works/: index.html
polarrouteserver/: urls.py
polarrouteserver/route_api/: admin.py  models.py  serializers.py  tasks.py  utils.py  views.py
polarrouteserver/route_api/fixtures/: locations_bas.json
polarrouteserver/route_api/migrations/: 0017_route_tags.py  0018_alter_route_tags.py  0019_mesh_protect_route_protect.py
polarrouteserver/settings/: base.py  production.py
polarrouteserver/settings/docker/: development.py  production.py
request_route/: request_route.py
requesting-routes/: index.html
search/: search_index.json
tests/: test_tasks.py  test_utils.py  test_views.py
vehicle-management/: index.html
