[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "polarrouteserver"
authors = [
  {name = "David Wyld", email = "dalby@bas.ac.uk"},
  {name = "Thomas Zwagerman", email = "thozwa@bas.ac.uk"},
]
description = "Backend server for serving PolarRoute and MeshiPhi assets and managing their calcuation using Django & Celery."
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "celery",
    "Django>=5.2,<6",
    "django-celery-beat",
    "django-celery-results",
    "django-cors-headers",
    "django-health-check[psutil,rabbitmq,celery]",
    "django-rest-framework",
    "django-taggit",
    "drf-spectacular[sidecar]",
    "haversine",
    "polar-route>=1.1.10",
    "psycopg>=3",
    "pyyaml",
    "SQLAlchemy",
]

[project.urls]
Homepage = "https://github.com/bas-logist/PolarRoute-server"
Repository = "https://github.com/bas-logist/PolarRoute-server.git"
Issues = "https://github.com/bas-logist/PolarRoute-server/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools_scm]
version_file = "polarrouteserver/_version.py"

[tool.setuptools.exclude-package-data]
polarrouteserver = [
    "*.sqlite3",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar",
    "pre-commit",
    "pytest",
    "pytest-celery",
    "pytest-django",
    "ruff",
]
prod = [
    "gunicorn"
]
build = [
    "build"
]
cov = [
    "pytest-cov"
]
cov-badge = [
    "coverage-badge"
]

[dependency-groups]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-autoapi",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]",
    "mkdocs-render-swagger-plugin",
]

[project.scripts]
request_route = "request_route.request_route:main"

[tool.ruff]
exclude = ["tests/*"]

[tool.ruff.lint.per-file-ignores]
"polarrouteserver/settings/*" = [
    "F403", # allow from .. import * in settings modules
    "F405", # allow defined in * imports in settings modules
    ] 

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "polarrouteserver.settings.test"
addopts = "--create-db"
filterwarnings =  "error::RuntimeWarning" # turn RuntimeWarnings into errors/test failures
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
omit = [
    "polarrouteserver/settings/*",
    "polarrouteserver/route_api/migrations/*",
    "polarrouteserver/route_api/admin.py",
    "polarrouteserver/route_api/apps.py",
    "polarrouteserver/asgi.py",
    "polarrouteserver/admin.py",
    "polarrouteserver/urls.py",
    "polarrouteserver/wsgi.py",
    "route_request/*",
    ]
